# polyqr

./: ReadMe.md  pyproject.toml  test.py
.github/workflows/: publish-to-pypi.yml  test.yml
docs/: generate.py  tikz.tex
src/polyqr/: __init__.py
src/tikz_qrcode/: __init__.py
tests/: defs.py  test_svg.py  test_tikz.py  tikz.py
